--- a/views/front.ejs
+++ b/views/front.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title><Resultados></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>Resultado</h1>
+    <p><%= resultados %></p>
   </body>
 </html>
